--- a/web/resources/templates/about.html
+++ b/web/resources/templates/about.html
@@ -4,12 +4,16 @@
 <div class="col-md">
   <h4>What is this?</h4>
   <p>This is a tool for Eve Online aimed at being able to quickly price check items in bulk. </p>
+  
+  <h4>Deadfords Evepraisal?</h4>
+  <p>This tool, although based on the 'Sudorandom' Go-Evepraisal, is in no way linked to him. Please do not contact him for any issues.</p>
 
   <h4>What's new?</h4>
-  <p><b>2018-03-04</b> - Update the styling to use bootstrap v4. Add link to the Google Sheets add-on.</p>
-  <p><b>2017-11-13</b> - Add private appraisals, ability to delete appraisals, pagination for personal appraisal history, settings modal, non-persistent appraisals</p>
-  <p><b>2017-09-16</b> - Added JSON endpoint for creating new appraisals and <a href="/api-docs">a page documenting the API endpoints</a>.</p>
-  <p><b>2017-06-24</b> - The new version of evepraisal has the following improvements:
+  <p><b>07-10-2024</b> - Update the code for Deadfords.net and github to <a href="https://github.com/SmanUK1988/evepraisal/" target="_blank">SmanUK1988/Evepraisal</a></p>
+  <p><b>04-03-2018</b> - Update the styling to use bootstrap v4. Add link to the Google Sheets add-on.</p>
+  <p><b>13-11-2017</b> - Add private appraisals, ability to delete appraisals, pagination for personal appraisal history, settings modal, non-persistent appraisals</p>
+  <p><b>16-09-2017</b> - Added JSON endpoint for creating new appraisals and <a href="/api-docs">a page documenting the API endpoints</a>.</p>
+  <p><b>24-06-2017</b> - The new version of evepraisal has the following improvements:
     <ul>
       <li>SSO - Login with your eve account</li>
       <li>No ads while logged in</li>
@@ -40,10 +44,9 @@
 
   <h4>How do I contact you?</h4>
   <ul>
-    <li>Send an in-game mail to: <a href="https://gate.eveonline.com/Profile/Magerawr" target="_blank">Magerawr</a></li>
-    <li>Open an <a href="https://github.com/evepraisal/go-evepraisal/issues?state=open" target="_blank">issue on github</a></li>
-    <li>Talk to <a href="https://tweetfleet.slack.com/messages/@sudorandom" target="_blank">@sudorandom</a> in the <a href="https://tweetfleet.slack.com/messages/C03CGPX82" target="_blank">#devfleet channel on the tweetfleet slack</a></li>
-    <li>Mention <a href="https://twitter.com/sudorandom" target="_blank">@sudorandom</a> on twitter.</a></li>
+    <li>Send an in-game mail to: <a href="https://www.eveworkbench.com/u/SmanUK" target="_blank">SmanUK</a></li>
+    <li>Open an <a href="https://github.com/SmanUK1988/evepraisal/issues?state=open" target="_blank">issue on github</a></li>
+    <li>Mention <a href="https://twitter.com/SmanUK" target="_blank">@SmanUK</a> on twitter.</a></li>
   </ul>
   <p>I get a lot of mail so I don't have the time to respond to everyone.</p>
 </div>
